test/corpus/weirdstuff.txt
====================
Basic duplication
====================

(
2!0xfff
)

---
(source_file
  (code_block
    (duplicated_statement
      duplicated_object: (literal
        (number
          (integer )))
      duplication_times: (literal
        (number
          (hexinteger ))))))

====================
partial: [a, b, _]
====================
(
[a, b, _];
)
---
(source_file
  (code_block
    (collection
      (variable
        (environment_var
          name: (identifier )))
      (variable
        (environment_var
          name: (identifier )))
      (partial ))))

====================
partial: object.msg(a, _, _)
====================
(
object.msg(a, _, _);
)
---

(source_file
  (code_block
    (function_call
      (receiver
        (variable
          (local_var
            name: (identifier ))))
      (method_call
        name: (method_name )
        (parameter_call_list
          (argument_calls
            (unnamed_argument
              (variable
                (environment_var
                  name: (identifier )))))
          (argument_calls
            (unnamed_argument
              (partial )))
          (argument_calls
            (unnamed_argument
              (partial ))))))))

====================
partial: a + _
====================
(
a + _;
)
---

(source_file
  (code_block
    (binary_expression
      left: (variable
        (environment_var
          name: (identifier )))
      right: (partial))))
